[gd_scene load_steps=4 format=3 uid="uid://d1e2f3g4h5i6j"]

[ext_resource type="Script" uid="uid://i3hey8xc0u3v" path="res://addons/my-ecosystem-template/pause-menu/pause_menu.gd" id="1_abcde"]
[ext_resource type="Script" uid="uid://cmo5qw3rubish" path="res://addons/my-ecosystem-template/buttons/anim_button.gd" id="2_ef2i2"]
[ext_resource type="Script" uid="uid://cnfh1rl7a17mv" path="res://addons/my-ecosystem-template/transitions/popup_animator.gd" id="2_fghij"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 50

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -109.0
offset_right = 137.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -66.5
offset_right = 77.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="PauseMenu/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"
script = ExtResource("2_ef2i2")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="SettingsButton" type="Button" parent="PauseMenu/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"
script = ExtResource("2_ef2i2")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="QuitButton" type="Button" parent="PauseMenu/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Main Menu"
script = ExtResource("2_ef2i2")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="PopupAnimator" type="Node" parent="PauseMenu" node_paths=PackedStringArray("target_node")]
script = ExtResource("2_fghij")
target_node = NodePath("..")
